<resources>
    <string name="app_name">JavaBasicApp</string>
    <string name="hello">Hello World!</string>
    <string name="selamat_pagi">selamat pagi</string>
    <string name="iswandi_saputra">iswandi saputra</string>
    <string name="nama">Nama</string>
    <string name="inputkan_nama_anda">inputkan nama anda ?</string>
    <string name="usia">usia</string>
    <string name="inputkan_usia_anda">inputkan usia anda ?</string>
    <string name="inputkan_no_hp_anda">inputkan no hp anda ?</string>
    <string name="no_hp">no hp</string>
    <string name="daftar">daftar</string>
    <string name="webview">webview</string>
    <string name="keluar">keluar</string>
    <string name="listview_biasa">listview biasa</string>
    <string name="custom_listview">custom listview</string>
    <string name="gridview_biasa">Gridview Biasa</string>
    <string name="custom_grid">custom GRid</string>
    <string name="show_alert_dialog">Show Alert Dialog</string>
    <string name="nama_anda">nama anda</string>
    <string name="email">email</string>
    <string name="emailanda">email anda</string>
    <string name="usia_anda">usia anda</string>
    <string name="no_hp_anda">no hp anda</string>
    <string name="jenis_kelamin">jenis kelamin</string>
    <string name="laki_laki">laki - laki</string>
    <string name="perempuan">perempuan</string>
    <string name="hobby">hobby</string>
    <string name="ngoding">ngoding</string>
    <string name="makan">makan</string>
    <string name="nonton_film">nonton film</string>
    <string name="gowes">gowes</string>
    <array name="namaBuah">
        <item>alpukat</item>
        <item>apel</item>
        <item>ceri</item>
        <item>durian</item>
        <item>manggis</item>
    </array>
    <array name="detailBuah">
        <item>alpukat tumbuhan penghasil buah meja dengan nama sama. Tumbuhan ini berasal dari
            Meksiko dan Amerika Tengah dan kini banyak dibudidayakan di Amerika Selatan dan Amerika
            Tengah sebagai tanaman perkebunan monokultur dan sebagai tanaman pekarangan di
            daerah-daerah
        </item>
        <item>apel tumbuhan penghasil buah meja dengan nama sama. Tumbuhan ini berasal dari Meksiko
            dan Amerika Tengah dan kini banyak dibudidayakan di Amerika Selatan dan Amerika Tengah
            sebagai tanaman perkebunan monokultur dan sebagai tanaman pekarangan di daerah-daerah
        </item>
        <item>ceri tumbuhan penghasil buah meja dengan nama sama. Tumbuhan ini berasal dari Meksiko
            dan Amerika Tengah dan kini banyak dibudidayakan di Amerika Selatan dan Amerika Tengah
            sebagai tanaman perkebunan monokultur dan sebagai tanaman pekarangan di daerah-daerah
        </item>
        <item>durian tumbuhan penghasil buah meja dengan nama sama. Tumbuhan ini berasal dari
            Meksiko dan Amerika Tengah dan kini banyak dibudidayakan di Amerika Selatan dan Amerika
            Tengah sebagai tanaman perkebunan monokultur dan sebagai tanaman pekarangan di
            daerah-daerah
        </item>
        <item>manggis tumbuhan penghasil buah meja dengan nama sama. Tumbuhan ini berasal dari
            Meksiko dan Amerika Tengah dan kini banyak dibudidayakan di Amerika Selatan dan Amerika
            Tengah sebagai tanaman perkebunan monokultur dan sebagai tanaman pekarangan di
            daerah-daerah
        </item>
    </array>
</resources>