<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/nama"
       android:textSize="25sp"
       />

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
      android:hint="@string/inputkan_nama_anda"
       android:inputType="text"
      />
   <TextView
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:text="@string/usia"
       android:textSize="25sp"
       />

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/inputkan_usia_anda"
       android:inputType="number"
       android:drawableLeft="@mipmap/ic_helm"
       android:maxLength="3"
       />
   <TextView
       android:layout_width="wrap_content"
       android:layout_gravity="center"
    android:layout_margin="10dp"
       android:layout_height="wrap_content"
       android:text="@string/no_hp"
       android:textSize="25sp"
       />

   <EditText
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:hint="@string/inputkan_no_hp_anda"
       android:inputType="phone"
       />

   <Button
       android:layout_width="200dp"
       android:layout_height="wrap_content"
       android:layout_gravity="center"
      android:text="@string/daftar"/>

   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"

      android:orientation="horizontal">
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="3dp"
         android:text="satu"/>
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="3dp"
          android:text="dua"/>
      <Button
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_weight="1"
          android:layout_margin="3dp"
          android:text="tiga"/>

   </LinearLayout>
   <ImageView
       android:layout_width="match_parent"
       android:layout_height="200dp"
       android:src="@drawable/helm2"/>



</LinearLayout>